<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="sharedUserId" translate="false"><xliff:g id="x"></xliff:g></string>
    <string name="process" translate="false"><xliff:g id="x"></xliff:g></string>
    <string name="app_name">Turbo Launcher</string>
    <string name="default_theme">Default theme</string>
    <string name="uid_name">Android Core Apps</string>
    <string name="folder_name">Folder</string>
    <string name="contact_name">Contacts</string>
    <string name="chooser_wallpaper">Select wallpaper from</string>
    <string name="chooser_3dwidget">Complete action using</string>
    <string name="wallpaper_instructions">Set wallpaper</string>
    <string name="pick_wallpaper">Wallpapers</string>
    <string name="activity_not_found">Application is not installed on your phone.</string>
    <string name="activity_not_found_from_intent">No Application can handle this.</string>
    <string name="configure_wallpaper">Configure...</string>
    <string name="iloong_shellstr">Launcher Loading...</string>
    <string name="circle_autoSort">AutoSort</string>
    <string name="circle_iconOverlap">Overlap</string>
    <string name="circle_iconTrans">Translation</string>
    <string name="circle_multiSelect">MultiSelect</string>
    <string name="circle_createFolder">Create Folder</string>
    <string name="circle_deleteAll">DeleteAll</string>
    <string name="circle_noticeToast">Return to the origin to select</string>
    <string name="circle_dstOverToast">Beyond the trap range limit</string>
    <string name="circle_deleteALLToast">Sure to delete all?</string>
    <string name="circle_selectMutiToOperToast">Multiple icons operation</string>
    <string name="circle_notSupportToast">This version is temporarily unable to use this
		feature</string>
    <string name="circle_ok_action">OK</string>
    <string name="circle_cancel_action">Cancel</string>
    <string name="circle_unselectAppIconToast">No icon selected</string>
    <string name="rename_folder_label">Folder name</string>
    <string name="rename_folder_title">Rename Folder</string>
    <string name="rename_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="folder_hint_text">Unnamed Folder</string>
    <string name="folder3D_del_toast">Sure to delete this folder?</string>
    <string name="widget_download_content">Not yet installed on your phone, click OK to
		download and install!</string>
    <string name="apk_cannot_found_content">Cannot found APK for this application on your SD
		card!</string>
    <string name="folder3D_full">Folder is full</string>
    <string name="folder3D_name">Folder</string>
    <string name="menu_item_add_item"></string>
    <string name="group_applications">Applications</string>
    <string name="group_shortcuts">Shortcuts</string>
    <string name="group_folder">New folder</string>
    <string name="group_live_folders">Folder</string>
    <string name="group_widgets">Widgets</string>
    <string name="group_wallpapers">Wallpaper</string>
    <string name="group_3D_widgets">3D widgets</string>
    <string name="group_contacts">Contacts</string>
    <string name="add_folder">Folder</string>
    <string name="add_clock">Clock</string>
    <string name="add_photo_frame">Picture frame</string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="shortcut_installed">		Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>		\" created.</string>
    <string name="shortcut_uninstalled">		Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>		\" was removed.</string>
    <string name="shortcut_duplicate">		Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>		\" already exists.</string>
    <string name="title_select_shortcut">Select shortcut</string>
    <string name="title_select_application">Select application</string>
    <string name="title_select_live_folder">Select folder</string>
    <string name="all_apps_button_label">All applications</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an application to add
		shortcuts without user
		intervention.</string>
    <string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
    <string name="permdesc_uninstall_shortcut">Allows an application to remove
		shortcuts without
		user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows an application to read the settings and
		shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows an application to change the settings and
		shortcuts in Home.</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="default_browser_url" translatable="true">		http://www.google.com/m?client=ms-{CID}source=android-home-hotseat</string>
    <string name="errorHint">		A error has happened %1$s.Please click<i><b>"REPORT"</b></i>		to send the error information to us by email, Thanks!!!</string>
    <string name="hello">hello iLoong User</string>
    <string name="folder_renamed">Folder renamed to %1$s</string>
    <string name="folder_name_format">Folder: %1$s</string>
    <string name="can_not_add_widget">Can\'t add to this page</string>
    <string name="can_not_delete_page">The minimum number of screens has reached</string>
    <string name="delete_page">Page is not empty, sure to delete it?</string>
    <string name="appbar_tab_app">Apps</string>
    <string name="appbar_tab_widget">Widgets</string>
    <string name="appbar_tab_uninstall">Uninstall apps</string>
    <string name="appbar_tab_hide">Hide apps</string>
    <string name="appbar_tab_edit_mode">Editor Mode</string>
    <string name="sort_app_default">Sort by default</string>
    <string name="sort_app_init">Sort by factory data</string>
    <string name="sort_app_name">Sort by app name</string>
    <string name="sort_app_install_time">Sort by install time</string>
    <string name="app_bar_navigator_audioalbum">Audio</string>
    <string name="app_bar_navigator_video">Video</string>
    <string name="app_bar_navigator_photobucket">Photo</string>
    <string name="app_bar_title_photo">Photo</string>
    <string name="app_bar_title_audio">Song</string>
    <string name="sort_app_use_frequency">Sort by frequency of use</string>
    <string name="sort_dialog_title">Sort Icons</string>
    <string name="widget_empty_dialog">This 3D widget is not installed，please install and then add it</string>
    <string name="widget_empty_title">3D widget</string>
    <string name="widget_other_tools">Other tools</string>
    <string name="hotseat_mainmenu">Apps</string>
    <string name="hotseat_workspace">Home</string>
    <string name="main_menu">Main Menu</string>
    <string name="trash_icon_title">Delete</string>
    <string name="choose_widget">Choose widget</string>
    <string name="choose_widget_ex">Choose Tools</string>
    <string name="fold_name_too_long">Folder name exceeds the maximum length</string>
    <string name="app_downloading">Downloading</string>
    <string-array name="app_effects_list_preference">
        <item>Standard</item>
        <item>Random</item>
        <item>Stack</item>
        <item>Inner Box</item>
        <item>Outer Box</item>
        <item>Flip</item>
        <item>Cross Flip</item>
        <item>Windmill</item>
        <item>Wave</item>
        <item>Wheel</item>
        <item>Ball</item>
        <item>Cylinder</item>
        <item>Binaries</item>
        <item>Jump</item>
        <item>Melt</item>
        <item>Window</item>
        <item>Tornado</item>
        <item>Erase</item>
        <item>Cross</item>
        <item>Ceraunite</item>
        <item>Snake</item>
        <item>Crystal</item>
    </string-array>
    <string-array name="app_effectsvalue_list_preference">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
    </string-array>
    <string-array name="workspace_effects_list_preference">
        <item>Standard</item>
        <item>Random</item>
        <item>Inner Box</item>
        <item>Outer Box</item>
        <item>Flip</item>
        <item>Cross Flip</item>
        <item>Windmill</item>
        <item>Wave</item>
        <item>Default</item>
        <item>Crystal</item>
    </string-array>
    <string-array name="workspace_effectsvalue_list_preference">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string-array name="icon_size_display">
        <item>big</item>
        <item>middle</item>
        <item>small</item>
    </string-array>
    <string-array name="icon_size_value">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="icon_size_no_middle_display">
        <item>big</item>
        <item>small</item>
    </string-array>
    <string-array name="icon_size_no_middle_value">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="particle_list_preference">
        <item>None</item>
        <item>Nightclubs</item>
        <item>Bright Star</item>
        <item>Clover</item>
        <item>Maple Leaf</item>
    </string-array>
    <string-array name="particle_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="effect_standard">Standard</string>
    <string name="effect_random">Random</string>
    <string name="effect_cascade">Stack</string>
    <string name="effect_outbox">Outer Box</string>
    <string name="effect_inbox">Inner Box</string>
    <string name="effect_flip">Flip</string>
    <string name="effect_bigfan">Cross Flip</string>
    <string name="effect_fan">Windmill</string>
    <string name="effect_wave">Wave</string>
    <string name="effect_ball">Ball</string>
    <string name="effect_wheel">Wheel</string>
    <string name="effect_cylinder">Cylinder</string>
    <string name="effect_default">Default</string>
    <string name="effect_crystal">Crystal</string>
    <string name="effect_binaries">Binaries</string>
    <string name="effect_blind">Blind</string>
    <string name="effect_jump">Jump</string>
    <string name="backup_no_back">The system has no backup</string>
    <string name="backup_desktop">Backup desktop</string>
    <string name="restore_desktop">Restore desktop</string>
    <string name="restore_desktoptxt">Restore to latest backup</string>
    <string name="welcome_guide">Tips</string>
     <string name="welcome_guide_detail">Instruction about how to use our Desktop</string>
<string name="dsfirst_iconstxt">Icons</string>
<string name="dsfirst_systemtxt">System</string>
<string name="system_vibrator">Vibrator</string>
<string name="system_restoredefault">Reset to default</string>
<string name="icon_big">big</string>
<string name="icon_middle">middle</string>
<string name="icon_small">small</string>
<string name="ds_default_step1">Make sure that "Turbo Launcher" is selected</string>
<string name="ds_default_step2">Click "Always"</string>
<string name="ds_default_start">Start</string>
</resources>