<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="match_parent"
    android:layout_gravity="center"
   
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/dsdefault_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/mylauncher_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tips_image" >
        </ImageView>
    </LinearLayout>

    <RelativeLayout
         android:id="@+id/dsdefault_steps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_below="@+id/dsdefault_image"
        android:paddingLeft="40px" >

        <TextView
             android:id="@+id/dsdefault_step1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/ds_default_step1"
            android:textColor="#ffffff"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/dsdefault_step2"
             android:layout_marginTop="10dp"
            android:layout_below="@+id/dsdefault_step1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
           android:text="@string/ds_default_step2"
            android:textColor="#ffffff"
            android:textSize="18dp" />
    </RelativeLayout>

    <RelativeLayout
         android:layout_below="@+id/dsdefault_steps"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_alignParentRight="true"
            >

            <Button
                android:id="@+id/set_default_start"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:textColor="@color/dssetdefault_selector"
                android:background="@drawable/ds_tittle_bg"
             	android:text="@string/ds_default_start"
                android:textSize="18dp" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>