<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BigBackgroundColor"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/iconstmp_backll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dstopbackground"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/dsback_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/dsfirst_iconstxt"
            android:textColor="@color/TitleColor"
            android:textSize="20sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/dsicon_big"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:background="@drawable/dsdesktop_selector" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/icon_big"
                            android:textColor="@color/dsfont_selector"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <RadioButton
                        android:id="@+id/dsicon_bigradio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/dsradio_selector"
                        android:button="@null" />
                </RelativeLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/dscutoffline" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/dsicon_middle"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:background="@drawable/dsdesktop_selector" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/icon_middle"
                            android:textColor="@color/dsfont_selector"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <RadioButton
                        android:id="@+id/dsicon_middleradio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/dsradio_selector"
                        android:button="@null" />
                </RelativeLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/dscutoffline" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/dsicon_small"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:background="@drawable/dsdesktop_selector" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/icon_small"
                            android:textColor="@color/dsfont_selector"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <RadioButton
                        android:id="@+id/dsicon_smallradio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/dsradio_selector"
                        android:button="@null" />
                </RelativeLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/dscutoffline" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>